Another attemp to fixed side bar position on mobile browser

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -109,7 +109,7 @@
         z-index: 9999;
 
         //test
-        overflow: hidden;
+        -webkit-backface-visibility: hidden;
 
 
 
